# codex-grade8-curriculum

./: .gitignore  README.md  pyproject.toml  zbpack.json
assets/presenter/: README.md
audio-test/: manifest.json
latex/: metadata.yaml  preamble.tex  教材PDF編譯規範.md
science-site/: app.js  index.html  styles.css
scripts/: build_module_video.py  build_short_video.py  build_textbook_pdf.py  compile_tex_pdf.py  generate_edge_tts.py
video/: economics_course_promo_image_prompts.md  finance_module_overview.md  prerequisite_economics_promo.md  prerequisite_finance_overview.md  prerequisite_finance_short.md
教材/: 惠文國二下數學_PBL自學語音教材.md  惠文國二下數學_PBL自學語音教材.tex  惠文國二下數學_段考對齊讀書計畫.md  惠文國二下數學_段考對齊讀書計畫.tex
